Añado el host sql.gonzalonazareno.org

--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - '/srv/moodledata_aulavirtual:/var/www/moodledata:rw'
     ports:
       - '$PORT_DEPLOY:80'
+    extra_hosts:
+      - "sql.gonzalonazareno.org:172.18.0.1"
     environment:
       MOODLE_DBNAME: ${DB_NAME}
       MOODLE_DBUSER: ${DB_USER}
